@@ -1,3 +1,8 @@
+2011-11-18 Borut Razem <borut.razem AT siol.net>
+
+	* index.php: added News - sdcc 3.1.0 RC2
+	* previous.php: added old news
+
 2011-11-06 Borut Razem <borut.razem AT siol.net>
 
 	* index.php: added News - sdcc 3.1.0 RC1
